完善接口文档
完善用户模块接口文档，验证用户模块接口文档全部可用。
