# docs/swagger.json
@@ -5,20 +5,17 @@
         "contact": {}
     },
     "paths": {
-        "/v1/user/deleteUser": {
+        "/v1/user/deleteUser/{id}": {
             "delete": {
-                "description": "通过id，删除用户",
+                "description": "通过id，删除用户 eg：{ \"id\":\"7\"}",
                 "consumes": [
-                    "application/json"
-                ],
-                "produces": [
                     "application/json"
                 ],
                 "summary": "删除用户",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "account_id",
+                        "description": "id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -49,7 +46,7 @@
         },
         "/v1/user/login": {
             "post": {
-                "description": "通过id和pw登录",
+                "description": "通过id和pw登录 eg：{ \"account\":\"wbq\", \"password\":\"123\" }",
                 "consumes": [
                     "application/json"
                 ],
@@ -59,18 +56,13 @@
                 "summary": "用户登录",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "account_id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Password",
-                        "name": "password",
-                        "in": "path",
-                        "required": true
+                        "description": "account+password",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
@@ -85,7 +77,7 @@
         },
         "/v1/user/register": {
             "post": {
-                "description": "注册一个新的用户",
+                "description": "注册一个新的用户 eg：{ \"account\":\"wbq\", \"password\":\"123\" }",
                 "consumes": [
                     "application/json"
                 ],
@@ -95,11 +87,13 @@
                 "summary": "用户注册",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Password",
-                        "name": "password",
-                        "in": "path",
-                        "required": true
+                        "description": "account+password",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
@@ -112,9 +106,9 @@
                 }
             }
         },
-        "/v1/user/updatePassword": {
+        "/v1/user/updatePassword/{id}": {
             "put": {
-                "description": "通过id，修改密码",
+                "description": "通过id，修改密码 eg：{\"password\":\"123\" }",
                 "consumes": [
                     "application/json"
                 ],
@@ -125,25 +119,27 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "account_id",
+                        "description": "id",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "type": "string",
-                        "description": "new_pw",
-                        "name": "password",
-                        "in": "path",
-                        "required": true
+                        "description": "new_pwd",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {}
             }
         },
-        "/v1/user/updateUsername": {
+        "/v1/user/updateUsername/{id}": {
             "put": {
-                "description": "通过id，修改用户名",
+                "description": "通过id，修改用户名 eg：{\"username\":\"wangwang\" }",
                 "consumes": [
                     "application/json"
                 ],
@@ -154,17 +150,19 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "account_id",
+                        "description": "id",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "type": "string",
                         "description": "new_name",
-                        "name": "username",
-                        "in": "path",
-                        "required": true
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
